Apply Prettier code formatting to all HTML, CSS, and JS files

--- a/ko/publications/index.html
+++ b/ko/publications/index.html
@@ -1,79 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>연구성과 - MasVisio Research</title>
-    <meta name="description" content="MasVisio Research의 시각 과학, 근시 제어, AI 진단 분야 논문을 살펴보세요.">
-    <meta property="og:title" content="논문 - MasVisio Research">
-    <meta property="og:description" content="MasVisio Research의 시각 과학, 근시 제어, AI 진단 분야 논문을 살펴보세요.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="MasVisio Research의 시각 과학, 근시 제어, AI 진단 분야 논문을 살펴보세요."
+    />
+    <meta property="og:title" content="논문 - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="MasVisio Research의 시각 과학, 근시 제어, AI 진단 분야 논문을 살펴보세요."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio<br>Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio<br />Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <span class="active">🇰🇷</span> <a href="../../publications/index.html">🇬🇧</a>
-        </div>
+      <div class="lang-switch">
+        <span class="active">🇰🇷</span>
+        <a href="../../publications/index.html">🇬🇧</a>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">홈</a>
-            <a href="../team/index.html" class="nav-item">구성원</a>
-            <a href="../research/overview.html" class="nav-item">도전과제</a>
-            <a href="index.html" class="nav-item active">연구성과</a>
-            <div class="sidebar-submenu"
-                style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
-                <a href="#reviewed-papers" class="nav-item">연구논문</a>
-                <a href="#conference" class="nav-item">학술발표</a>
-                <a href="#patent" class="nav-item">특허</a>
-            </div>
-            <a href="../gallery/index.html" class="nav-item">갤러리</a>
-            <a href="../partnership/index.html" class="nav-item">제공서비스</a>
-            <a href="../contact.html" class="nav-item">파트너</a>
-        </nav>
-
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">개인정보처리방침</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">문의하기</a>
-            </div>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">홈</a>
+        <a href="../team/index.html" class="nav-item">구성원</a>
+        <a href="../research/overview.html" class="nav-item">도전과제</a>
+        <a href="index.html" class="nav-item active">연구성과</a>
+        <div
+          class="sidebar-submenu"
+          style="
+            padding-left: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.2rem;
+            margin-bottom: 0.5rem;
+          "
+        >
+          <a href="#reviewed-papers" class="nav-item">연구논문</a>
+          <a href="#conference" class="nav-item">학술발표</a>
+          <a href="#patent" class="nav-item">특허</a>
         </div>
+        <a href="../gallery/index.html" class="nav-item">갤러리</a>
+        <a href="../partnership/index.html" class="nav-item">제공서비스</a>
+        <a href="../contact.html" class="nav-item">파트너</a>
+      </nav>
+
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >개인정보처리방침</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >문의하기</a
+          >
+        </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header class="publications-header" style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">연구 성과</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">최신 연구 결과와 학술적 기여를 소개합니다.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header
+            class="publications-header"
+            style="margin-bottom: 4rem; border-bottom: none"
+          >
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">연구 성과</h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              최신 연구 결과와 학술적 기여를 소개합니다.
+            </p>
+          </header>
 
-                <div id="publications-container">
-                    <!-- Dynamic content will be loaded here -->
-                    <p>연구 성과를 불러오는 중...</p>
-                </div>
-            </div>
-        </section>
+          <div id="publications-container">
+            <!-- Dynamic content will be loaded here -->
+            <p>연구 성과를 불러오는 중...</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../../assets/js/main.js?v=1.7"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', loadPublications);
+      document.addEventListener("DOMContentLoaded", loadPublications);
     </script>
-</body>
-
+  </body>
 </html>
