--- a/ko/research/diagnostics.html
+++ b/ko/research/diagnostics.html
@@ -1,76 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI 질환 진단 및 예측 - MasVisio Research</title>
-    <meta name="description" content="MasVisio의 AI 기반 시각 진단 연구. 딥러닝을 활용한 정밀 진단 및 개인맞춤형 치료.">
-    <meta property="og:title" content="AI 진단 - MasVisio Research">
-    <meta property="og:description" content="MasVisio의 AI 기반 시각 진단 연구. 딥러닝을 활용한 정밀 진단 및 개인맞춤형 치료.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="MasVisio의 AI 기반 시각 진단 연구. 딥러닝을 활용한 정밀 진단 및 개인맞춤형 치료."
+    />
+    <meta property="og:title" content="AI 진단 - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="MasVisio의 AI 기반 시각 진단 연구. 딥러닝을 활용한 정밀 진단 및 개인맞춤형 치료."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="../index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <span class="active">🇰🇷</span> <a href="../../research/diagnostics.html">🇬🇧</a>
-        </div>
+      <div class="lang-switch">
+        <span class="active">🇰🇷</span>
+        <a href="../../research/diagnostics.html">🇬🇧</a>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">홈</a>
-            <a href="../team/index.html" class="nav-item">구성원</a>
-            <a href="overview.html" class="nav-item active">도전과제</a>
-            <a href="../publications/index.html" class="nav-item">연구성과</a>
-            <a href="../gallery/index.html" class="nav-item">갤러리</a>
-            <a href="../partnership/index.html" class="nav-item">제공서비스</a>
-            <a href="../contact.html" class="nav-item">파트너</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">홈</a>
+        <a href="../team/index.html" class="nav-item">구성원</a>
+        <a href="overview.html" class="nav-item active">도전과제</a>
+        <a href="../publications/index.html" class="nav-item">연구성과</a>
+        <a href="../gallery/index.html" class="nav-item">갤러리</a>
+        <a href="../partnership/index.html" class="nav-item">제공서비스</a>
+        <a href="../contact.html" class="nav-item">파트너</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">개인정보처리방침</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">문의하기</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >개인정보처리방침</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >문의하기</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">전반적 안구 측정 기반 질환 예측</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">AI 시각 지능을 활용한 8단계 안구 질환 위험도 분석 시스템</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header style="margin-bottom: 4rem; border-bottom: none">
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">
+              전반적 안구 측정 기반 질환 예측
+            </h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              AI 시각 지능을 활용한 8단계 안구 질환 위험도 분석 시스템
+            </p>
+          </header>
 
-                <div id="diagnostics-container">
-                    <!-- Dynamic content will be loaded here from assets/js/main.js -->
-                    <div class="loading">데이터를 불러오는 중...</div>
-                </div>
-            </div>
-        </section>
+          <div id="diagnostics-container">
+            <!-- Dynamic content will be loaded here from assets/js/main.js -->
+            <div class="loading">데이터를 불러오는 중...</div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../../assets/js/main.js?v=1.4"></script>
-</body>
-
+  </body>
 </html>
