--- a/partnership/index.html
+++ b/partnership/index.html
@@ -1,95 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services - MasVisio Research</title>
-    <meta name="description" content="Partner with MasVisio Research for collaborative vision rehabilitation research and technology development.">
-    <meta property="og:title" content="Partnership - MasVisio Research">
-    <meta property="og:description" content="Partner with MasVisio Research for collaborative vision rehabilitation research and technology development.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="Partner with MasVisio Research for collaborative vision rehabilitation research and technology development."
+    />
+    <meta property="og:title" content="Partnership - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="Partner with MasVisio Research for collaborative vision rehabilitation research and technology development."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="../index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <a href="../ko/partnership/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
-        </div>
+      <div class="lang-switch">
+        <a href="../ko/partnership/index.html">🇰🇷</a>
+        <span class="active">🇬🇧</span>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">Home</a>
-            <a href="../team/index.html" class="nav-item">Team</a>
-            <a href="../research/overview.html" class="nav-item">Challenges</a>
-            <a href="../publications/index.html" class="nav-item">Publications</a>
-            <a href="../gallery/index.html" class="nav-item">Gallery</a>
-            <a href="index.html" class="nav-item active">Services</a>
-            <a href="../contact.html" class="nav-item">Partners</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">Home</a>
+        <a href="../team/index.html" class="nav-item">Team</a>
+        <a href="../research/overview.html" class="nav-item">Challenges</a>
+        <a href="../publications/index.html" class="nav-item">Publications</a>
+        <a href="../gallery/index.html" class="nav-item">Gallery</a>
+        <a href="index.html" class="nav-item active">Services</a>
+        <a href="../contact.html" class="nav-item">Partners</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">Privacy Policy</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">Contact</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Privacy Policy</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Contact</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Services & Partnership</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Collaborate with us to bring innovative vision
-                        solutions to the world.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header style="margin-bottom: 4rem; border-bottom: none">
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">
+              Services & Partnership
+            </h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              Collaborate with us to bring innovative vision solutions to the
+              world.
+            </p>
+          </header>
 
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <h3>Research Partnership</h3>
-                        <p>Collaborative research opportunities for academic and industrial partners to advance vision
-                            science.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>Clinical Trials</h3>
-                        <p>Comprehensive clinical trial management and protocol design for vision rehabilitation
-                            solutions.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>Technology Licensing</h3>
-                        <p>Licensing opportunities for our patented 4D myopia control and AI-based visual diagnosis
-                            technologies.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>Consulting</h3>
-                        <p>Expert advisory services for vision science, optical engineering, and AI healthcare projects.
-                        </p>
-                    </div>
-                </div>
+          <div class="features-grid">
+            <div class="feature-card">
+              <h3>Research Partnership</h3>
+              <p>
+                Collaborative research opportunities for academic and industrial
+                partners to advance vision science.
+              </p>
             </div>
-        </section>
+            <div class="feature-card">
+              <h3>Clinical Trials</h3>
+              <p>
+                Comprehensive clinical trial management and protocol design for
+                vision rehabilitation solutions.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3>Technology Licensing</h3>
+              <p>
+                Licensing opportunities for our patented 4D myopia control and
+                AI-based visual diagnosis technologies.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3>Consulting</h3>
+              <p>
+                Expert advisory services for vision science, optical
+                engineering, and AI healthcare projects.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../assets/js/main.js?v=1.4"></script>
-</body>
-
+  </body>
 </html>
