--- a/publications/index.html
+++ b/publications/index.html
@@ -1,82 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Publications - MasVisio Research</title>
-    <meta name="description"
-        content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
-    <meta property="og:title" content="Publications - MasVisio Research">
-    <meta property="og:description"
-        content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics."
+    />
+    <meta property="og:title" content="Publications - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="Explore peer-reviewed publications from MasVisio Research in vision science, myopia control, and AI diagnostics."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio<br>Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio<br />Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <a href="../ko/publications/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
-        </div>
+      <div class="lang-switch">
+        <a href="../ko/publications/index.html">🇰🇷</a>
+        <span class="active">🇬🇧</span>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">Home</a>
-            <a href="../team/index.html" class="nav-item">Team</a>
-            <a href="../research/overview.html" class="nav-item">Challenges</a>
-            <a href="index.html" class="nav-item active">Publications</a>
-            <div class="sidebar-submenu"
-                style="padding-left: 1.5rem; display: flex; flex-direction: column; gap: 0.2rem; margin-bottom: 0.5rem;">
-                <a href="#reviewed-papers" class="nav-item">Reviewed Papers</a>
-                <a href="#conference" class="nav-item">Conference</a>
-                <a href="#patent" class="nav-item">Patent</a>
-            </div>
-            <a href="../gallery/index.html" class="nav-item">Gallery</a>
-            <a href="../partnership/index.html" class="nav-item">Services</a>
-            <a href="../contact.html" class="nav-item">Partners</a>
-        </nav>
-
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">Privacy Policy</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">Contact</a>
-            </div>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">Home</a>
+        <a href="../team/index.html" class="nav-item">Team</a>
+        <a href="../research/overview.html" class="nav-item">Challenges</a>
+        <a href="index.html" class="nav-item active">Publications</a>
+        <div
+          class="sidebar-submenu"
+          style="
+            padding-left: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.2rem;
+            margin-bottom: 0.5rem;
+          "
+        >
+          <a href="#reviewed-papers" class="nav-item">Reviewed Papers</a>
+          <a href="#conference" class="nav-item">Conference</a>
+          <a href="#patent" class="nav-item">Patent</a>
         </div>
+        <a href="../gallery/index.html" class="nav-item">Gallery</a>
+        <a href="../partnership/index.html" class="nav-item">Services</a>
+        <a href="../contact.html" class="nav-item">Partners</a>
+      </nav>
+
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Privacy Policy</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Contact</a
+          >
+        </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header class="publications-header" style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Publications</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Our latest research findings and academic
-                        contributions.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header
+            class="publications-header"
+            style="margin-bottom: 4rem; border-bottom: none"
+          >
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">Publications</h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              Our latest research findings and academic contributions.
+            </p>
+          </header>
 
-                <div id="publications-container">
-                    <!-- Dynamic content will be loaded here -->
-                    <p>Loading publications...</p>
-                </div>
-            </div>
-        </section>
+          <div id="publications-container">
+            <!-- Dynamic content will be loaded here -->
+            <p>Loading publications...</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../assets/js/main.js?v=1.7"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', loadPublications);
+      document.addEventListener("DOMContentLoaded", loadPublications);
     </script>
-</body>
-
+  </body>
 </html>
