--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,78 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery - MasVisio Research</title>
-    <meta name="description"
-        content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
-    <meta property="og:title" content="Gallery - MasVisio Research">
-    <meta property="og:description"
-        content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs."
+    />
+    <meta property="og:title" content="Gallery - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="Browse the research gallery of MasVisio Research showcasing our vision science innovations and breakthroughs."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="../index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <a href="../ko/gallery/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
-        </div>
+      <div class="lang-switch">
+        <a href="../ko/gallery/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">Home</a>
-            <a href="../team/index.html" class="nav-item">Team</a>
-            <a href="../research/overview.html" class="nav-item">Challenges</a>
-            <a href="../publications/index.html" class="nav-item">Publications</a>
-            <a href="index.html" class="nav-item active">Gallery</a>
-            <a href="../partnership/index.html" class="nav-item">Services</a>
-            <a href="../contact.html" class="nav-item">Contact</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">Home</a>
+        <a href="../team/index.html" class="nav-item">Team</a>
+        <a href="../research/overview.html" class="nav-item">Challenges</a>
+        <a href="../publications/index.html" class="nav-item">Publications</a>
+        <a href="index.html" class="nav-item active">Gallery</a>
+        <a href="../partnership/index.html" class="nav-item">Services</a>
+        <a href="../contact.html" class="nav-item">Contact</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">Privacy Policy</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">Contact Us</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Privacy Policy</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >Contact Us</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Gallery</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">Explore our research activities and events.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header style="margin-bottom: 4rem; border-bottom: none">
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">Gallery</h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              Explore our research activities and events.
+            </p>
+          </header>
 
-                <div id="gallery-container">
-                    <p>Coming Soon...</p>
-                </div>
-            </div>
-        </section>
+          <div id="gallery-container">
+            <p>Coming Soon...</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../assets/js/main.js?v=1.4"></script>
-</body>
-
+  </body>
 </html>
