--- a/ko/partnership/index.html
+++ b/ko/partnership/index.html
@@ -1,90 +1,125 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>제공서비스 - MasVisio Research</title>
-    <meta name="description" content="MasVisio Research와 파트너십을 맺고 시각재활 연구 및 기술 개발에 협력하세요.">
-    <meta property="og:title" content="파트너십 - MasVisio Research">
-    <meta property="og:description" content="MasVisio Research와 파트너십을 맺고 시각재활 연구 및 기술 개발에 협력하세요.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="MasVisio Research와 파트너십을 맺고 시각재활 연구 및 기술 개발에 협력하세요."
+    />
+    <meta property="og:title" content="파트너십 - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="MasVisio Research와 파트너십을 맺고 시각재활 연구 및 기술 개발에 협력하세요."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="../index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <span class="active">🇰🇷</span> <a href="../../partnership/index.html">🇬🇧</a>
-        </div>
+      <div class="lang-switch">
+        <span class="active">🇰🇷</span>
+        <a href="../../partnership/index.html">🇬🇧</a>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">홈</a>
-            <a href="../team/index.html" class="nav-item">구성원</a>
-            <a href="../research/overview.html" class="nav-item">도전과제</a>
-            <a href="../publications/index.html" class="nav-item">연구성과</a>
-            <a href="../gallery/index.html" class="nav-item">갤러리</a>
-            <a href="index.html" class="nav-item active">제공서비스</a>
-            <a href="../contact.html" class="nav-item">파트너</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">홈</a>
+        <a href="../team/index.html" class="nav-item">구성원</a>
+        <a href="../research/overview.html" class="nav-item">도전과제</a>
+        <a href="../publications/index.html" class="nav-item">연구성과</a>
+        <a href="../gallery/index.html" class="nav-item">갤러리</a>
+        <a href="index.html" class="nav-item active">제공서비스</a>
+        <a href="../contact.html" class="nav-item">파트너</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">개인정보처리방침</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">문의하기</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >개인정보처리방침</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >문의하기</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">제공 서비스</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">혁신적인 시각 솔루션을 위해 협력하세요.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header style="margin-bottom: 4rem; border-bottom: none">
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">제공 서비스</h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              혁신적인 시각 솔루션을 위해 협력하세요.
+            </p>
+          </header>
 
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <h3>연구 파트너십</h3>
-                        <p>시각 과학 발전을 위해 학계 및 산업계 파트너와 공동 연구 기회를 제공합니다.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>임상 시험</h3>
-                        <p>시각 재활 솔루션을 위한 종합적인 임상 시험 관리 및 프로토콜 설계를 지원합니다.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>기술 라이선싱</h3>
-                        <p>특허받은 4D 근시 제어 및 AI 기반 시각 진단 기술에 대한 라이선싱 기회를 제공합니다.</p>
-                    </div>
-                    <div class="feature-card">
-                        <h3>컨설팅</h3>
-                        <p>시각 과학, 광학 공학, AI 헬스케어 프로젝트를 위한 전문가 자문 서비스를 제공합니다.</p>
-                    </div>
-                </div>
+          <div class="features-grid">
+            <div class="feature-card">
+              <h3>연구 파트너십</h3>
+              <p>
+                시각 과학 발전을 위해 학계 및 산업계 파트너와 공동 연구 기회를
+                제공합니다.
+              </p>
             </div>
-        </section>
+            <div class="feature-card">
+              <h3>임상 시험</h3>
+              <p>
+                시각 재활 솔루션을 위한 종합적인 임상 시험 관리 및 프로토콜
+                설계를 지원합니다.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3>기술 라이선싱</h3>
+              <p>
+                특허받은 4D 근시 제어 및 AI 기반 시각 진단 기술에 대한 라이선싱
+                기회를 제공합니다.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3>컨설팅</h3>
+              <p>
+                시각 과학, 광학 공학, AI 헬스케어 프로젝트를 위한 전문가 자문
+                서비스를 제공합니다.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../../assets/js/main.js?v=1.4"></script>
-</body>
-
+  </body>
 </html>
