--- a/ko/team/index.html
+++ b/ko/team/index.html
@@ -1,74 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>구성원 - MasVisio Research</title>
-    <meta name="description" content="MasVisio Research의 연구원과 팀원을 만나보세요. 시각 과학 발전에 헌신하는 전문가들입니다.">
-    <meta property="og:title" content="팀 - MasVisio Research">
-    <meta property="og:description" content="MasVisio Research의 연구원과 팀원을 만나보세요. 시각 과학 발전에 헌신하는 전문가들입니다.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../../assets/css/components.css?v=1.7">
-</head>
+    <meta
+      name="description"
+      content="MasVisio Research의 연구원과 팀원을 만나보세요. 시각 과학 발전에 헌신하는 전문가들입니다."
+    />
+    <meta property="og:title" content="팀 - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="MasVisio Research의 연구원과 팀원을 만나보세요. 시각 과학 발전에 헌신하는 전문가들입니다."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../../assets/css/components.css?v=1.7" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="../index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="../index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="../index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="../index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <span class="active">🇰🇷</span> <a href="../../team/index.html">🇬🇧</a>
-        </div>
+      <div class="lang-switch">
+        <span class="active">🇰🇷</span> <a href="../../team/index.html">🇬🇧</a>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="../index.html" class="nav-item">홈</a>
-            <a href="index.html" class="nav-item active">구성원</a>
-            <a href="../research/overview.html" class="nav-item">도전과제</a>
-            <a href="../publications/index.html" class="nav-item">연구성과</a>
-            <a href="../gallery/index.html" class="nav-item">갤러리</a>
-            <a href="../partnership/index.html" class="nav-item">제공서비스</a>
-            <a href="../contact.html" class="nav-item">파트너</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="../index.html" class="nav-item">홈</a>
+        <a href="index.html" class="nav-item active">구성원</a>
+        <a href="../research/overview.html" class="nav-item">도전과제</a>
+        <a href="../publications/index.html" class="nav-item">연구성과</a>
+        <a href="../gallery/index.html" class="nav-item">갤러리</a>
+        <a href="../partnership/index.html" class="nav-item">제공서비스</a>
+        <a href="../contact.html" class="nav-item">파트너</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="../privacy.html" style="color: #94a3b8; text-decoration: none;">개인정보처리방침</a> |
-                <a href="../contact.html" style="color: #94a3b8; text-decoration: none;">문의하기</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a
+            href="../privacy.html"
+            style="color: #94a3b8; text-decoration: none"
+            >개인정보처리방침</a
+          >
+          |
+          <a
+            href="../contact.html"
+            style="color: #94a3b8; text-decoration: none"
+            >문의하기</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <h2 class="section-title" style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b;">구성원 소개</h2>
-                <p style="color: #64748b; margin-bottom: 3rem;">MasVisio Research를 이끌어가는 전문가들을 소개합니다.</p>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <h2
+            class="section-title"
+            style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b"
+          >
+            구성원 소개
+          </h2>
+          <p style="color: #64748b; margin-bottom: 3rem">
+            MasVisio Research를 이끌어가는 전문가들을 소개합니다.
+          </p>
 
-                <div class="team-grid" id="team-container">
-                    <!-- 동적 콘텐츠가 여기에 로드됩니다 -->
-                    <p>팀원 정보를 불러오는 중...</p>
-                </div>
-            </div>
-        </section>
+          <div class="team-grid" id="team-container">
+            <!-- 동적 콘텐츠가 여기에 로드됩니다 -->
+            <p>팀원 정보를 불러오는 중...</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="../../assets/js/main.js?v=1.7"></script>
-</body>
-
+  </body>
 </html>
