--- a/privacy.html
+++ b/privacy.html
@@ -1,96 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - MasVisio Research</title>
-    <meta name="description" content="Privacy policy for MasVisio Research website. Learn how we collect, use, and protect your personal information.">
-    <meta property="og:title" content="Privacy Policy - MasVisio Research">
-    <meta property="og:description" content="Privacy policy for MasVisio Research website. Learn how we collect, use, and protect your personal information.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="Privacy policy for MasVisio Research website. Learn how we collect, use, and protect your personal information."
+    />
+    <meta property="og:title" content="Privacy Policy - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="Privacy policy for MasVisio Research website. Learn how we collect, use, and protect your personal information."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="assets/css/components.css?v=1.4" />
+  </head>
 
-<body class="sidebar-layout">
+  <body class="sidebar-layout">
     <header class="mobile-header">
-        <a href="index.html" class="mobile-logo">
-            <h1>MasVisio<br>Research</h1>
-            <span class="logo-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-        </a>
+      <a href="index.html" class="mobile-logo">
+        <h1>MasVisio<br />Research</h1>
+        <span class="logo-subtitle"
+          >Vision Intelligence &<br />Biomedical Engineering</span
+        >
+      </a>
     </header>
 
     <aside class="sidebar">
-        <div class="sidebar-header">
-            <a href="index.html" class="sidebar-logo">
-                <h1>MasVisio Research</h1>
-                <span class="sidebar-subtitle">Vision Intelligence &<br>Biomedical Engineering</span>
-            </a>
-        </div>
+      <div class="sidebar-header">
+        <a href="index.html" class="sidebar-logo">
+          <h1>MasVisio Research</h1>
+          <span class="sidebar-subtitle"
+            >Vision Intelligence &<br />Biomedical Engineering</span
+          >
+        </a>
+      </div>
 
-        <div class="lang-switch">
-            <a href="ko/privacy.html">🇰🇷</a> <span class="active">🇬🇧</span>
-        </div>
+      <div class="lang-switch">
+        <a href="ko/privacy.html">🇰🇷</a> <span class="active">🇬🇧</span>
+      </div>
 
-        <nav class="sidebar-nav">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="team/index.html" class="nav-item">Team</a>
-            <a href="research/overview.html" class="nav-item">Challenges</a>
-            <a href="publications/index.html" class="nav-item">Publications</a>
-            <a href="gallery/index.html" class="nav-item">Gallery</a>
-            <a href="partnership/index.html" class="nav-item">Services</a>
-            <a href="contact.html" class="nav-item">Partners</a>
-        </nav>
+      <nav class="sidebar-nav">
+        <a href="index.html" class="nav-item">Home</a>
+        <a href="team/index.html" class="nav-item">Team</a>
+        <a href="research/overview.html" class="nav-item">Challenges</a>
+        <a href="publications/index.html" class="nav-item">Publications</a>
+        <a href="gallery/index.html" class="nav-item">Gallery</a>
+        <a href="partnership/index.html" class="nav-item">Services</a>
+        <a href="contact.html" class="nav-item">Partners</a>
+      </nav>
 
-        <div class="sidebar-footer">
-            <p class="copyright">&copy; 2025 MasVisio Research</p>
-            <div style="margin-top: 10px; font-size: 0.7rem;">
-                <a href="privacy.html" style="color: #94a3b8; text-decoration: none;">Privacy Policy</a> |
-                <a href="contact.html" style="color: #94a3b8; text-decoration: none;">Contact</a>
-            </div>
+      <div class="sidebar-footer">
+        <p class="copyright">&copy; 2025 MasVisio Research</p>
+        <div style="margin-top: 10px; font-size: 0.7rem">
+          <a href="privacy.html" style="color: #94a3b8; text-decoration: none"
+            >Privacy Policy</a
+          >
+          |
+          <a href="contact.html" style="color: #94a3b8; text-decoration: none"
+            >Contact</a
+          >
         </div>
+      </div>
     </aside>
 
     <main class="main-content">
-        <section class="section" style="padding: 4rem 4rem;">
-            <div class="container">
-                <header style="margin-bottom: 4rem; border-bottom: none;">
-                    <h2 style="font-size: 3rem; margin-bottom: 1rem;">Privacy Policy</h2>
-                    <p style="font-size: 1.2rem; color: #64748b;">How we collect, use, and protect your information.</p>
-                </header>
+      <section class="section" style="padding: 4rem 4rem">
+        <div class="container">
+          <header style="margin-bottom: 4rem; border-bottom: none">
+            <h2 style="font-size: 3rem; margin-bottom: 1rem">Privacy Policy</h2>
+            <p style="font-size: 1.2rem; color: #64748b">
+              How we collect, use, and protect your information.
+            </p>
+          </header>
 
-                <div style="max-width: 800px; line-height: 1.8;">
-                    <h3>1. Introduction</h3>
-                    <p>MasVisio Research ("we," "our," or "us") respects your privacy and is committed to protecting
-                        your personal data. This privacy policy will inform you as to how we look after your personal
-                        data when you visit our website and tell you about your privacy rights and how the law protects
-                        you.</p>
+          <div style="max-width: 800px; line-height: 1.8">
+            <h3>1. Introduction</h3>
+            <p>
+              MasVisio Research ("we," "our," or "us") respects your privacy and
+              is committed to protecting your personal data. This privacy policy
+              will inform you as to how we look after your personal data when
+              you visit our website and tell you about your privacy rights and
+              how the law protects you.
+            </p>
 
-                    <h3>2. Information We Collect</h3>
-                    <p>We may collect, use, store and transfer different kinds of personal data about you which we have
-                        grouped together follows: Identity Data, Contact Data, Technical Data, and Usage Data.</p>
+            <h3>2. Information We Collect</h3>
+            <p>
+              We may collect, use, store and transfer different kinds of
+              personal data about you which we have grouped together follows:
+              Identity Data, Contact Data, Technical Data, and Usage Data.
+            </p>
 
-                    <h3>3. How We Use Your Information</h3>
-                    <p>We will only use your personal data when the law allows us to. Most commonly, we will use your
-                        personal data in the following circumstances: to provide the services you request, to improve
-                        our website, and to communicate with you.</p>
+            <h3>3. How We Use Your Information</h3>
+            <p>
+              We will only use your personal data when the law allows us to.
+              Most commonly, we will use your personal data in the following
+              circumstances: to provide the services you request, to improve our
+              website, and to communicate with you.
+            </p>
 
-                    <h3>4. Data Security</h3>
-                    <p>We have put in place appropriate security measures to prevent your personal data from being
-                        accidentally lost, used or accessed in an unauthorized way, altered or disclosed.</p>
+            <h3>4. Data Security</h3>
+            <p>
+              We have put in place appropriate security measures to prevent your
+              personal data from being accidentally lost, used or accessed in an
+              unauthorized way, altered or disclosed.
+            </p>
 
-                    <h3>5. Contact Us</h3>
-                    <p>If you have any questions about this privacy policy or our privacy practices, please contact us
-                        at contact@masvisio.com.</p>
-                </div>
-            </div>
-        </section>
+            <h3>5. Contact Us</h3>
+            <p>
+              If you have any questions about this privacy policy or our privacy
+              practices, please contact us at contact@masvisio.com.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="assets/js/main.js?v=1.4"></script>
-</body>
-
+  </body>
 </html>
