--- a/research/project.html
+++ b/research/project.html
@@ -1,83 +1,92 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Details - MasVisio Research</title>
-    <meta name="description" content="Detailed view of MasVisio Research projects in vision rehabilitation and vision science.">
-    <meta property="og:title" content="Research Project - MasVisio Research">
-    <meta property="og:description" content="Detailed view of MasVisio Research projects in vision rehabilitation and vision science.">
-    <meta property="og:type" content="website">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4">
-    <link rel="stylesheet" href="../assets/css/components.css?v=1.4">
-</head>
+    <meta
+      name="description"
+      content="Detailed view of MasVisio Research projects in vision rehabilitation and vision science."
+    />
+    <meta property="og:title" content="Research Project - MasVisio Research" />
+    <meta
+      property="og:description"
+      content="Detailed view of MasVisio Research projects in vision rehabilitation and vision science."
+    />
+    <meta property="og:type" content="website" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
+    <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container">
-            <div class="logo-container">
-                <h1>MasVisio Research</h1>
-                <div class="logo-subtitle">Vision Intelligence & Biomedical Engineering</div>
-            </div>
-            <nav>
-                <div class="lang-switch">
-                    <a href="#">🇰🇷</a> <span class="active">🇬🇧</span>
-                </div>
-                <div class="nav-links">
-                    <a href="../index.html">Home</a>
-                    <a href="../team/index.html">Team</a>
-                    <a href="overview.html" class="active">Challenges</a>
-                    <a href="../publications/index.html">Publications</a>
-                    <a href="../partnership/index.html">Services</a>
-                    <a href="../contact.html">Contact</a>
-                </div>
-            </nav>
+      <div class="container">
+        <div class="logo-container">
+          <h1>MasVisio Research</h1>
+          <div class="logo-subtitle">
+            Vision Intelligence & Biomedical Engineering
+          </div>
         </div>
+        <nav>
+          <div class="lang-switch">
+            <a href="#">🇰🇷</a> <span class="active">🇬🇧</span>
+          </div>
+          <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../team/index.html">Team</a>
+            <a href="overview.html" class="active">Challenges</a>
+            <a href="../publications/index.html">Publications</a>
+            <a href="../partnership/index.html">Services</a>
+            <a href="../contact.html">Contact</a>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <main>
-        <section class="hero">
-            <div class="container">
-                <h2>Research Project</h2>
-                <p>Detailed information about our ongoing research.</p>
-            </div>
-        </section>
+      <section class="hero">
+        <div class="container">
+          <h2>Research Project</h2>
+          <p>Detailed information about our ongoing research.</p>
+        </div>
+      </section>
 
-        <section class="section">
-            <div class="container">
-                <div id="project-detail-container">
-                    <p>Loading project details...</p>
-                </div>
-            </div>
-        </section>
+      <section class="section">
+        <div class="container">
+          <div id="project-detail-container">
+            <p>Loading project details...</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025 MasVisio Research</p>
-            <div>
-                <a href="../privacy.html">Privacy Policy</a>
-                <a href="../contact.html">Contact</a>
-            </div>
+      <div class="container">
+        <p>&copy; 2025 MasVisio Research</p>
+        <div>
+          <a href="../privacy.html">Privacy Policy</a>
+          <a href="../contact.html">Contact</a>
         </div>
+      </div>
     </footer>
 
     <script src="../assets/js/main.js?v=1.4"></script>
     <script>
-        // Simple language switcher for the project page to keep the ID
-        function switchLanguage(lang) {
-            const params = new URLSearchParams(window.location.search);
-            const id = params.get('id');
-            if (lang === 'ko') {
-                window.location.href = `../ko/research/project.html?id=${id}`;
-            } else {
-                window.location.href = `project.html?id=${id}`;
-            }
+      // Simple language switcher for the project page to keep the ID
+      function switchLanguage(lang) {
+        const params = new URLSearchParams(window.location.search);
+        const id = params.get("id");
+        if (lang === "ko") {
+          window.location.href = `../ko/research/project.html?id=${id}`;
+        } else {
+          window.location.href = `project.html?id=${id}`;
         }
+      }
     </script>
-</body>
-
+  </body>
 </html>
