Replace static LED circuit diagram with animated GIF showing flicker sequence

--- a/research/overview.html
+++ b/research/overview.html
@@ -405,7 +405,7 @@
                   style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
                   <figure
                     style="flex: 1 1 30%; min-width: 250px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                    <img src="../assets/images/research/phase2/led_ring_circuit.png" alt="LED Ring Circuit Design"
+                    <img src="../assets/images/research/phase2/led_flicker.gif" alt="LED Ring Circuit Design"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">LED
                       Control Circuit Diagram</figcaption>
